--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,36 @@
+# Laravel Default
+/vendor
 /node_modules
-/public/hot
 /public/storage
 /storage/*.key
-/vendor
 .env
-.env.backup
-.phpunit.result.cache
-docker-compose.override.yml
-Homestead.json
-Homestead.yaml
+.env.*.backup
+
+# Laravel IDE helpers (if using barryvdh/laravel-ide-helper)
+.phpstorm.meta.php
+/_ide_helper.php
+/_ide_helper_models.php
+
+# Laravel Mix (Webpack)
 npm-debug.log
 yarn-error.log
-/.idea
-/.vscode
-/public/assets/uploads/menu_icons/*
-.lock
-/public/assets/uploads/*
-public/uploads/*
+mix-manifest.json
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Composer
+composer.lock
+
+# VS Code
+.vscode
+
+# PHPStorm
+.idea
+
+# Backup or temp files
+*.log
+*.bak
+*.tmp
+*.swp
